#50 Add unity_fixture_discover_host_tests function for runtime test discovery

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,8 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+*_include.cmake
+*_tests.cmake
 _deps
 
 ### CMake Patch ###
